--- a/web/index.html
+++ b/web/index.html
@@ -208,7 +208,7 @@
     <!--Login Page-->
     <section id="LoginPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
 
-        <div class="h-75  border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
+        <div class="border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;height: 574px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
 
             <div class="text-center" style="position: relative;top: 20px">
                 <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">LOG IN</h1>
@@ -245,7 +245,7 @@
 
                 <div class="mb-4  me-5 ms-5">
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white " style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black">Log in</button>
+                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
 
                 </div>
 
@@ -268,6 +268,12 @@
                     <button type="button" class="btn btn-primary btn-floating mx-1">
                         <i class="fab fa-github"></i>
                     </button>
+                </div>
+
+                <hr class="divider-horizontal-blurry" />
+
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end" >
+                    <button type="button" class="btn btn-danger text-end" id="btnCancelLogin">Cancel</button>
                 </div>
                 
             </form>
@@ -303,10 +309,17 @@
                     <label class="form-label text-white fw-light" for="confirmpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Confirm password</label>
                 </div>
 
-                <div class="mb-4  me-5 ms-5">
+                <div class="mb-5  me-5 ms-5">
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white" style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black;">Reset</button>
+                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Reset</button>
                 </div>
+
+                <hr class="divider-horizontal-blurry" />
+
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="button" class="btn btn-danger text-end" id="btnCancelForgotPW">Cancel</button>
+                </div>
+
             </form>
 
         </div>
@@ -315,90 +328,158 @@
 
     <section id="RegisterPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
 
-        <div class=" border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;height: 600px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
+        <div class="w-75 border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;height: 620px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
 
             <div class="text-center" style="position: relative;top: 20px">
-                <h1 class="mt-2 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">REGISTER</h1>
+                <h1 class="mt-1 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">REGISTER</h1>
             </div>
 
-            <form class="ms-5 me-5" style="position: relative; top: 50px;">
+            <div class="row mt-0">
 
-                <div class="row">
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="text" id="username" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
-                        </div>
-                    </div>
+                <div class="col">
+                    <form class="ms-5 me-5" style="position: relative; top: 50px;">
 
-                    <div class="col">
-                        <!-- Password input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="password" id="password" class="form-control  border border-2 border-white bg-light" />
-                            <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                        <div class="row">
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="text" id="username" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <!-- Password input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="password" id="password" class="form-control  border border-2 border-white bg-light" />
+                                    <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="text" id="customername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="customername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Full Name</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="tel" id="contactnumber" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="contactnumber" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Contact</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col mt-0">
+                                <!-- username input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="text" id="customeraddress" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="customeraddress" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Address</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline mb-2 ms-4 me-4">
+                                    <input type="email" id="email" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="email" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Email</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline  ms-4 me-4 mb-5">
+                                    <input type="text" id="nic" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="nic" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">NIC</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <!-- username input -->
+                                <div class="form-outline ms-4 me-4 mb-5">
+                                    <input type="text" id="drivinglicense" class="form-control  border border-2 border-white bg-light rounded-3" />
+                                    <label class="form-label text-white fw-light" for="drivinglicense" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Driving License NO</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr class="divider-horizontal-blurry" style="" />
+
+                    </form>
                 </div>
 
-                <div class="row">
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="text" id="customername" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="customername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Full Name</label>
-                        </div>
+                <div class="col">
+                    <div class="row">
+                        <form  style="border: 1px solid white; width: 530px; height: 104px;;position: relative; top: 50px;">
+                            <label class="form-label mt-4 text-white fw-light" for="uploadmyimage">Upload your image</label>
+                            <input type="file" class="form-control" id="uploadmyimage" />
+                        </form>
                     </div>
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="tel" id="contactnumber" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="contactnumber" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Contact</label>
-                        </div>
+
+                    <div class="row">
+                        <form  style="border: 1px solid white; width: 530px; height: 104px;;position: relative; top: 84px;">
+                            <form  style="border: 2px solid white; width: 530px; height: 104px;;position: relative; top: 50px;">
+                                <label class="form-label mt-4 text-white fw-light" for="uploadnicimage">Upload your NIC image</label>
+                                <input type="file" class="form-control" id="uploadnicimage" />
+                            </form>
+                        </form>
                     </div>
+
+                    <div class="row">
+                        <form  style="border: 1px solid white; width: 530px; height: 104px;;position: relative; top: 120px;">
+                            <form  style="border: 2px solid white; width: 530px; height: 104px;;position: relative; top: 50px;">
+                                <label class="form-label mt-4 text-white fw-light" for="uploaddrivinglicence">Upload your Driving Licence image</label>
+                                <input type="file" class="form-control" id="uploaddrivinglicence" />
+                            </form>
+                        </form>
+                    </div>
+
                 </div>
 
-                <div class="row">
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="text" id="customeraddress" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="customeraddress" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Address</label>
-                        </div>
-                    </div>
-                </div>
+            </div>
 
-                <div class="row">
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-2 ms-4 me-4">
-                            <input type="email" id="email" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="email" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Email</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-4 ms-4 me-4">
-                            <input type="text" id="nic" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="nic" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">NIC</label>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <!-- username input -->
-                        <div class="form-outline mb-4 ms-4 me-4">
-                            <input type="text" id="drivinglicense" class="form-control  border border-2 border-white bg-light rounded-3" />
-                            <label class="form-label text-white fw-light" for="drivinglicense" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Driving License NO</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="mb-4 me-5 ms-5">
+            <div class="row">
+                <div class="mb-4 me-5 ms-5 mt-5 text-center">
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white" style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black;">Register</button>
+                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;right: 0; top: 20px;margin: auto;width: 50%;">Register</button>
                 </div>
+
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="position: relative;left: -25px;top: 10px;">
+                    <button type="button" class="btn btn-danger text-end" id="btnCancelRegister">Cancel</button>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="CarAddPage" style="width: 100%; height: 100vh ;">
+
+        <div >
+
+            <div class="text-center" style="position: relative;top: 45px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif;">Car Encoding</h1>
+            </div>
+
+            <div class="text-center" style="position: relative;top: 66px;left: -572px;">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif; font-size: 25px">
+                    <i class="fas fa-taxi fa-1x"></i>
+                    Car Information
+                </h1>
+                
+            </div>
+
+            <form>
+
+
             </form>
 
         </div>
@@ -407,7 +488,6 @@
 
     <!--<section id="CustomerDashBoard" style="width: 100%; height: 100vh ;background-color: green"></section>
     <section id="AdminPanel" style="width: 100%; height: 100vh ;background-color: purple"></section>
-    <section id="CarAddPage" style="width: 100%; height: 100vh ;background-color: orange"></section>
     <section id="DriverAddPage" style="width: 100%; height: 100vh ;background-color: #b6effb"></section>
     <section id="ViewCustomerInformationPage" style="width: 100%;height: 100vh ; background-color: indianred"></section>
     <section id="ViewReserveDetailsPage" style="width: 100%; height: 100vh ;background-color: chartreuse"></section>
