--- a/web/index.html
+++ b/web/index.html
@@ -461,7 +461,7 @@
 
     </section>
 
-    <section id="CarAddPage" style="width: 100%; height: 100vh ;">
+    <section id="CarDetailsPage" style="width: 100%; height: 100vh ;">
 
         <div >
 
@@ -480,7 +480,91 @@
 
             </div>
 
-            <div style="width: 90vw; height: 80vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+
+
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="DriverDetailsPage" style="width: 100%; height: 100vh ;">
+
+        <div >
+
+            <div class="text-center" style="position: relative;top: 45px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif;">Driver Encoding</h1>
+            </div>
+
+            <div class="text-center" style="position: relative;top: 66px;left: -572px;">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif; font-size: 25px">
+                    <i class="fad fa-steering-wheel fa-1x"></i>
+                    Driver Information
+                    <button class="btn btn-success ms-5">
+                        <i class="fas fa-plus-circle"></i>
+                        Add</button>
+                </h1>
+
+            </div>
+
+            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+
+
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="ViewCustomerInformationPage" style="width: 100%;height: 100vh ; ">
+
+        <div >
+
+            <div class="text-center" style="position: relative;top: 45px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif;">Customer Encoding</h1>
+            </div>
+
+            <div class="text-center" style="position: relative;top: 66px;left: -572px;">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif; font-size: 25px">
+                    <i class="fas fa-user-friends"></i>
+                    Customer Information
+                </h1>
+
+            </div>
+
+            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+
+
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="ViewReserveDetailsPage" style="width: 100%; height: 100vh ;">
+
+        <div >
+
+            <div class="text-center" style="position: relative;top: 45px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif;">Reservations</h1>
+            </div>
+
+            <div class="text-center" style="position: relative;top: 66px;left: -572px;">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif; font-size: 25px">
+                    <i class="fas fa-list-alt"></i>
+                    Reservation Information
+                </h1>
+                <button class="btn ms-5" style="left: 246px;position: relative;top: -35px;background-color: mediumorchid">
+                    <i class="fas fa-edit"></i>
+                    Change Driver</button>
+
+            </div>
+
+            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 67px;right: 0;bottom: 0;left: 0;margin: auto">
 
 
 
@@ -493,8 +577,7 @@
     <!--<section id="CustomerDashBoard" style="width: 100%; height: 100vh ;background-color: green"></section>
     <section id="AdminPanel" style="width: 100%; height: 100vh ;background-color: purple"></section>
     <section id="DriverAddPage" style="width: 100%; height: 100vh ;background-color: #b6effb"></section>
-    <section id="ViewCustomerInformationPage" style="width: 100%;height: 100vh ; background-color: indianred"></section>
-    <section id="ViewReserveDetailsPage" style="width: 100%; height: 100vh ;background-color: chartreuse"></section>
+    <section id="CarAddPage" style="width: 100%; height: 100vh ;background-color: #b6effb"></section>
     <section id="SchedulePage" style="width: 100%; height: 100vh ;background-color: fuchsia"></section>
     <section id="PaymentPage" style="width: 100%; height: 100vh ;background-color: brown"></section>
     <section id="IncomePage" style="width: 100%; height: 100vh ;background-color: sandybrown"></section>-->
